# bluespark

./: .gitignore  Dockerfile  README.md  docker-compose.yml  run_camera_tcp.sh  run_docker.sh  run_docker_gui.sh  test01.py  test01.sh
src/bluespark_control/: README.md  package.xml  setup.cfg  setup.py
src/bluespark_control/bluespark_control/: rc_override_node.py  vehicle_manager_node.py
src/bluespark_interfaces/: CMakeLists.txt  package.xml
src/bluespark_interfaces/msg/: DetectedObject.msg
src/bluespark_interfaces/srv/: SetRCOverride.srv
src/bluespark_navigation/: README.md  package.xml  setup.cfg  setup.py
src/bluespark_navigation/bluespark_navigation/: README.md  depth_estimator_node.py  depth_hold_node.py  movement_node.py
src/bluespark_vision/: README.md  package.xml  setup.cfg  setup.py
src/bluespark_vision/bluespark_vision/: camera.py  detector.py  exceptions.py  simple_distance_calculator.py  vision_node.py
src/bluespark_vision/calibration_files/: camera_calibration.json  object_config.json
