<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>bluespark_control</name>
    <version>0.0.0</version>
    <description>Package controlling BlueROV robot via RC override</description>
    <maintainer email="jakubbalenkowski@gmail.com">Jakub Bałenkowski</maintainer>
    <license>TODO: License declaration</license>

    <depend>rclpy</depend>
    <depend>mavros_msgs</depend>
    <depend>bluespark_interfaces</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>